2014-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Remove trash/ directories.

	* doc/examples/trash/accu.cc,
	* doc/examples/trash/box.cc,
	* doc/examples/trash/cpp_issue.cc,
	* doc/examples/trash/erosion.cc,
	* doc/examples/trash/for_Z.cc,
	* doc/examples/trash/graph.cc,
	* doc/examples/trash/image2d.cc,
	* doc/examples/trash/image_flat.cc,
	* doc/examples/trash/image_if.cc,
	* doc/examples/trash/image_plain.cc,
	* doc/examples/trash/image_safe.cc,
	* doc/examples/trash/labeling_algo.cc,
	* doc/examples/trash/mk_graph.cc,
	* doc/examples/trash/p_array.2.cc,
	* doc/examples/trash/p_array.cc,
	* doc/examples/trash/p_image.cc,
	* doc/examples/trash/p_key.2.cc,
	* doc/examples/trash/p_key.cc,
	* doc/examples/trash/p_line2d.cc,
	* doc/examples/trash/p_mutable_array_of.cc,
	* doc/examples/trash/p_queue.cc,
	* doc/examples/trash/p_run.cc,
	* doc/examples/trash/p_vaccess.cc,
	* doc/examples/trash/proxy.cc,
	* doc/examples/trash/sub_image.cc,
	* doc/examples/trash/sub_image_if.cc,
	* doc/examples/trash/tuto_bis.cc,
	* doc/examples/trash/tuto_one.cc,
	* doc/examples/trash/vec.cc,
	* doc/examples/trash/win_multiple.cc,
	* doc/examples/trash/window.cc,
	* trash/bgraph_image.cc,
	* trash/bgraph_image.hh,
	* trash/bgraph_psite.hh,
	* trash/boost_graph.cc,
	* trash/boost_graph.hh,
	* trash/boost_graph_access.hh,
	* trash/boost_graph_property.hh,
	* trash/boost_graph_structure.hh,
	* trash/clock_neighb.hh,
	* trash/clock_neighb2d.cc,
	* trash/clock_neighb2d.hh,
	* trash/clock_neighb2d_bis.cc,
	* trash/display_color_pretty.cc,
	* trash/display_color_pretty.hh,
	* trash/display_remove.hh,
	* trash/display_save.hh,
	* trash/display_save_and_show.hh,
	* trash/display_show.cc,
	* trash/display_show.hh,
	* trash/fi_adaptor.cc,
	* trash/fi_adaptor.hh,
	* trash/freeimageplus.mk,
	* trash/graph_image.hh,
	* trash/line_graph_image.hh,
	* trash/mono_obased_rle_encode.hh,
	* trash/mono_obased_rle_image.cc,
	* trash/mono_obased_rle_image.hh,
	* trash/mono_rle_encode.hh,